# touring-api

./: .env.example  .gitignore  .phpstorm.meta.php  Makefile  README.md  _ide_helper.php  _ide_helper_models.php  biome.json  composer.json  docker-compose.yml  drizzle.config.ts  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  ruff.toml  tsconfig.json
app/Console/: Kernel.php
app/Models/: StartDate.php  Tour.php  User.php
app/Providers/: HealthServiceProvider.php  TelescopeServiceProvider.php
app/Services/: TourService.php
apps/tours/: apps.py
config/: app.php
data/: tours-simple.json
database/factories/: StartDateFactory.php  TourFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  0001_01_01_000002_create_jobs_table.php  2024_10_12_051351_create_personal_access_tokens_table.php  2024_10_12_051512_create_tours_table.php  2024_10_12_202119_create_audits_table.php  2024_10_12_203037_create_start_dates_table.php  2024_10_13_024914_create_telescope_entries_table.php
database/seeders/: DatabaseSeeder.php
drizzle/: 0000_fast_robin_chapel.sql  0000_lush_exiles.sql  0001_cheerful_shard.sql  0002_unknown_namor.sql  0003_public_white_queen.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
routes/: api.php  api_v1.php  console.php
scripts/: migrate.ts
src/: app.ts  server.ts
src/config/: env.ts
src/lib/: db.ts  schemas.ts
touric_api/: manage.py
touric_rest_api/: api.py  asgi.py  settings.py  wsgi.py
touring_rest_api/: manage.py
(+51 files in other folders)
